<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/notepad_light"
    android:orientation="vertical" >

    
       
    
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/title" />

		<EditText android:id="@+id/title" 
		  android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_weight="1"/>

	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	 <TextView
	        android:id="@+id/time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
	 
	    <TextView
	        android:id="@+id/date"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" />
		
	       
	</LinearLayout>

	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    
	    android:gravity="top"
	    android:text="@string/body" />


	
	<EditText
	    android:id="@+id/body"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    
	    android:layout_weight="1"
	    android:scrollbars="vertical" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

		<Button
		    android:id="@+id/confirm"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/confirm" />

		<Button
		    android:id="@+id/dateButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/date" />

		<Button
		    android:id="@+id/timeButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/time" />
		
	</LinearLayout>

</LinearLayout>
